fix: overflow

--- a/src/pages/Post/Post.scss
+++ b/src/pages/Post/Post.scss
@@ -64,6 +64,7 @@
   }
 
   .post-content {
+    overflow: scroll;
     font-family: 'Arial', serif;
 
     h1 {
